--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "react-native-web": "~0.18.9",
+    "react-dom": "18.1.0",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "prettier": "2.8.2"
   },
   "private": true
 }
